Update 'go-fnxtjpzj' component image to: quay.io/rhtap_qe/go-fnxtjpzj:0ad1cc42ee4f528fb4b9ae84f9396c7f5441746d@sha256:c2ff36fc7b62dd889b43f2f2dd7476e005f766af46b5a597e6594c71a75d4f4f

--- a/components/go-fnxtjpzj/overlays/development/deployment-patch.yaml
+++ b/components/go-fnxtjpzj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-fnxtjpzj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-fnxtjpzj:0ad1cc42ee4f528fb4b9ae84f9396c7f5441746d@sha256:c2ff36fc7b62dd889b43f2f2dd7476e005f766af46b5a597e6594c71a75d4f4f
+          name: container-image
